WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285041
[UnifiedPDF] [iOS] REGRESSION (
288149@main
): Text isn't selected in a PDF document until after the first tap or click
https://bugs.webkit.org/show_bug.cgi?id=285041
Summary
[UnifiedPDF] [iOS] REGRESSION (288149@main): Text isn't selected in a PDF doc...
Wenson Hsieh
Reported
2024-12-20 13:49:22 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-12-20 13:49:30 PST
<
rdar://problem/141841951
>
Wenson Hsieh
Comment 2
2024-12-20 13:54:44 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38285
EWS
Comment 3
2024-12-20 17:01:36 PST
Committed
288201@main
(bce5c33463ff): <
https://commits.webkit.org/288201@main
> Reviewed commits have been landed. Closing PR #38285 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug